# incremental-sync

./: .env.example  Makefile  README.md  main.py  pyproject.toml  run.sh
.github/workflows/: incremental-sync.yml
azure-incremental/src/: main.py  queries.py  settings.py
azure-incremental/src/clients/: port.py
azure/src/: constants.py  main.py  settings.py  utils.py
azure/src/clients/: azure_client.py  port.py
integrations/azure_incremental/: .env.example  Makefile  README.md  pyproject.toml
integrations/azure_incremental/scripts/: generate_x_resource_groups.sh  generate_x_vpc.sh
integrations/azure_incremental/src/: main.py  queries.py  settings.py
integrations/azure_incremental/src/clients/: azure_client.py  port.py
integrations/azure_incremental/src/services/: resource_containers.py  resources.py
integrations/azure_incremental/tests/: conftest.py
integrations/azure_incremental/tests/clients/: test_azure_client.py  test_port_client.py
integrations/azure_incremental/tests/integration/: test_main_integration.py
integrations/azure_incremental/tests/services/: test_resource_containers.py  test_resources.py
integrations/azure_incremental/tests/unit/: test_rate_limiter.py  test_settings.py  test_utils.py
