[tool.poetry]
name = "azure-incremental"
version = "0.1.0"
description = "Add your description here"
authors = ["Tom Tankilevitch <tom@getport.io>"]

[tool.poetry.dependencies]
python = "^3.12"
azure-identity = ">=1.19.0"
azure-mgmt-subscription = ">=3.1.1"
httpx = "^0.28.1"
loguru = "^0.7.3"
pydantic-settings = "^2.7.1"
azure-mgmt-resource = "^23.2.0"
azure-mgmt-resourcegraph = "^8.0.0"
aiohttp = "^3.12.14"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
mypy = "^1.14.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

norecursedirs = [
    "scripts",
    "node_modules",
    "py-requirements",
    "webpack",
    ".*",
    "{args}",
    "docs",
    "*.egg-info",
    ".git",
    "appdir",
    ".tox"
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "E4", "E7", "E9", "F", "I001"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.mypy]
warn_return_any = true
plugins = [
    "pydantic.mypy",
]
exclude = [
    'venv',
    '.venv',
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
